--- a/Windexer/wwwroot/index.html
+++ b/Windexer/wwwroot/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <title>Windexer</title>
+    <title>WinDexer</title>
     <base href="/" />
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/software-base.css">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="Windexer.styles.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="WinDexer.styles.css" />
+    <link rel="icon" type="image/jpeg" href="favicon.jpg" />
 </head>
 
 <body>
